# TranscriptReader

./: README.md  pyproject.toml
examples/: example-roster.yaml
tests/: test_scan.py  test_transcript.py  test_vault.py
treader/: cli.py  llm.py  scan.py  transcript.py  vault.py
treader/skills/: scan.md
