[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "treader"
version = "0.1.0"
description = "Transcript Reader — lightweight meeting transcript extractor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
]

[project.scripts]
treader = "treader.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["treader*"]

[tool.setuptools.package-data]
treader = ["skills/*.md"]
